--- a/style.css
+++ b/style.css
@@ -1,47 +1,60 @@
-*{
+* {
     padding: 0;
     margin: 0;
     text-decoration: none;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
 }
-.container{
+
+.container {
     padding: 40px 68px;
 }
+
 .banner {
     display: flex;
     background: #161616;
     border-radius: 30px;
     padding: 50px 70px;
 }
-.the{
-    margin-top:20px;
+
+.banner-content {
+    margin-top: 20px;
 }
-.the, .image-banner{
+
+.banner-content,
+.image-banner {
     width: 50%;
 }
-.the h1{
-    color: #fff;
+
+.banner-content h1 {
+    width: 531px;
+    height: 240px;
+    left: 246px;
+    top: 200px;
+    font-weight: 700;
     font-size: 70px;
-    font-weight: 600;
-    line-height: 85px;
-    margin-top: 80px;
+    line-height: 80px;
+    color: #FFFFFF;
+    margin-bottom: 20px;
 }
-.the p{
+
+.banner p {
     color: #fff;
     font-weight: 400;
     margin-bottom: 30px;
 }
-.button-1{
+
+.button-1 {
     background-color: red;
     padding: 20px 25px;
     color: #fff;
     font-weight: 700;
     border-radius: 5px;
 }
-.image-banner img{
+
+.image-banner img {
     width: 100%;
     position: relative;
     top: 57px;
@@ -52,42 +65,50 @@ body{
     gap: 25px;
     padding: 46px 0px;
 }
-.aside-part{
 
-}
 .linking {
     background: black;
-
 }
-.aside-btn{
+
+.linking a {
+    position: sticky;
+}
+
+.aside-btn {
     color: #000;
     background-color: #fff;
     padding: 7px 25px;
+
 }
 
-.right-part{
+.right-part {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
 }
-
-.player{
+.player-blog{
     border: 1px solid gray;
     border-radius: 10px;
 }
-.player-img{
 
+.player {
+    border: 1px solid gray;
+    border-radius: 10px;
+    width: 312px;
+    height: 242px;
 }
-.player-img img{
+
+.player-img img {
     width: 100%;
 }
 
-.content{
+.content {
     padding: 20px;
 }
 
-.transfer-btn{
-
+.transfer-btn {
+    width: 106px;
+    height: 32px;
 }
 
 .icon-part {
@@ -96,7 +117,7 @@ body{
     gap: 20px;
 }
 
-.side-part{
+.side-part {
     max-width: 50%;
 }
 
@@ -104,12 +125,12 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    background-color:black;
+    background-color: black;
     padding: 20px;
     border-radius: 10px;
 }
 
-.side-btn{
+.side-btn {
     font-weight: 500;
     font-size: 16px;
     color: #161616;
@@ -120,22 +141,32 @@ body{
     background-color: #fff;
 }
 
-#red{
+#red {
     background-color: red;
     border: 1px solid red;
     color: #fff;
 }
+
 .player-img {
     display: flex;
     padding: 22px 15px;
 }
 
-footer{
+span {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: black;
+    padding: 20px;
+}
+
+footer {
     background: black;
     padding: 50px;
 }
 
-footer h1{
+footer h1 {
     font-weight: 600;
     font-size: 40px;
     text-align: center;
@@ -143,7 +174,7 @@ footer h1{
     margin-bottom: 30px;
 }
 
-hr{
+hr {
     width: 80%;
     margin: 0px auto;
 }
@@ -159,7 +190,7 @@ nav li {
     margin: 35px 0px 0px 29px;
 }
 
-nav li a{
+nav li a {
     font-weight: 600;
     font-size: 16px;
     color: #fff;
